Added allure report.
Commands:
Run : mvn clean test
Generate report: mvn allure:serve

fixed sign up tests